src/parse-siwe-cat.js
_ps = (function () {
  function parseSiweMessage(msg, erc55 = 'validate') {
    const fname = 'parseSiweMessage: ';
    if (typeof msg !== 'string') {
      throw new Error(`${fname} invalid input msg: message must be of type string`);
    }
    const p = new Parser();
    const g = new Grammar();

    // set the parser's callback functions
    p.callbacks['ffscheme'] = cb.ffscheme;
    p.callbacks['fdomain'] = cb.fdomain;
    p.callbacks['faddress'] = cb.faddress;
    p.callbacks['fstatement'] = cb.fstatement;
    p.callbacks['furi'] = cb.furi;
    p.callbacks['fnonce'] = cb.fnonce;
    p.callbacks['fversion'] = cb.fversion;
    p.callbacks['fchain-id'] = cb.fchainId;
    p.callbacks['fissued-at'] = cb.fissuedAt;
    p.callbacks['fexpiration-time'] = cb.fexpirationTime;
    p.callbacks['fnot-before'] = cb.fnotBefore;
    p.callbacks['frequest-id'] = cb.frequestId;
    p.callbacks['fresources'] = cb.fresources;
    p.callbacks['fresource'] = cb.fresource;
    p.callbacks['empty-statement'] = cb.emptyStatement;
    p.callbacks['no-statement'] = cb.noStatement;
    p.callbacks['actual-statement'] = cb.actualStatment;
    p.callbacks['pre-uri'] = cb.preUri;
    p.callbacks['pre-version'] = cb.preVersion;
    p.callbacks['pre-chain-id'] = cb.preChainId;
    p.callbacks['pre-nonce'] = cb.preNonce;
    p.callbacks['pre-issued-at'] = cb.preIssuedAt;
    // URI callbacks
    p.callbacks['uri'] = cb.URI;
    p.callbacks['scheme'] = cb.scheme;
    p.callbacks['userinfo-at'] = cb.userinfo;
    p.callbacks['host'] = cb.host;
    p.callbacks['IP-literal'] = cb.ipLiteral;
    p.callbacks['port'] = cb.port;
    p.callbacks['path-abempty'] = cb.pathAbempty;
    p.callbacks['path-absolute'] = cb.pathAbsolute;
    p.callbacks['path-rootless'] = cb.pathRootless;
    p.callbacks['path-empty'] = cb.pathEmpty;
    p.callbacks['query'] = cb.query;
    p.callbacks['fragment'] = cb.fragment;
    p.callbacks['IPv4address'] = cb.ipv4;
    p.callbacks['nodcolon'] = cb.nodcolon;
    p.callbacks['dcolon'] = cb.dcolon;
    p.callbacks['h16'] = cb.h16;
    p.callbacks['h16c'] = cb.h16;
    p.callbacks['h16n'] = cb.h16;
    p.callbacks['h16cn'] = cb.h16;
    p.callbacks['dec-octet'] = cb.decOctet;
    p.callbacks['dec-digit'] = cb.decDigit;

    // BEGIN: some parser helper functions
    function validateDateTime(time, name = 'unknown') {
      const ret = p.parse(g, 'date-time', time);
      if (!ret.success || isNaN(Date.parse(time))) {
        throw new Error(`${fname}invalid date time: ${name} not date time string format: ${time}`);
      }
    }
    function validInt(i) {
      const valid = parseInt(i, 10);
      if (isNaN(valid)) {
        throw new Error(`${fname}invalid integer: not a number: ${i}`);
      } else if (valid === Infinity) {
        throw new Error(`${fname}invalid integer: Infinity: ${i}`);
      }
      return valid;
    }

    // Validates an RFC 3986 URI.
    // returns true if the URI is valid, false otherwise
    function isUri(URI) {
      ret = p.parse(g, 'uri', URI, {});
      return ret.success;
    }
    // END: some parser helper functions

    // first pass parse of the message
    // capture all the message parts, then validate them one-by-one later
    let data = { error: false };
    let ret;
    ret = p.parse(g, 'siwe-first-pass', msg, data);
    if (data.error) {
      throw new Error(`${fname}invalid siwe message: ${data.error}`);
    }
    if (!ret.success) {
      throw new Error(
        `${fname}invalid siwe message: carefully check message syntax, especially after required "Issued At: "\n${JSON.stringify(
          ret
        )}`
      );
    }

    if (data.fscheme) {
      // validate the scheme
      ret = p.parse(g, 'scheme', data.fscheme, {});
      if (!ret.success) {
        throw new Error(`${fname}invalid scheme: ${data.fscheme}`);
      }
    }

    // validate the domain
    ret = p.parse(g, 'authority', data.fdomain, {});
    if (!ret.success) {
      throw new Error(`${fname}invalid domain: ${data.fdomain}`);
    }

    // validate the address
    ret = p.parse(g, 'address', data.faddress);
    if (!ret.success) {
      throw new Error(`${fname}invalid address: ${data.faddress}`);
    }
    if (erc55 == 'validate') {
      // address must be ERC55 format
      if (!isERC55(data.faddress)) {
        throw new Error(
          `${fname}invalid ERC-55 format address: 'validate' specified, MUST be ERC55-conformant: ${data.faddress}`
        );
      }
    } else if (erc55 === 'convert') {
      // convert address to ERC55 format
      data.faddress = toERC55(data.faddress);
    }
    // else for any other value of erc55 no further action on the address is taken

    // validate the statement
    if (data.fstatement !== undefined && data.fstatement !== '') {
      ret = p.parse(g, 'statement', data.fstatement);
      if (!ret.success) {
        throw new Error(`${fname}invalid statement: ${data.fstatement}`);
      }
    }

    // validate the URI
    if (!isUri(data.furi)) {
      throw new Error(`${fname}invalid URI: ${data.furi}`);
    }

    // validate the version
    ret = p.parse(g, 'version', data.fversion);
    if (!ret.success) {
      throw new Error(`${fname}invalid Version: ${data.fversion}`);
    }
    data.fversion = validInt(data.fversion);

    // validate the chain-id
    ret = p.parse(g, 'chain-id', data.fchainId);
    if (!ret.success) {
      throw new Error(`${fname}invalid Chain ID: ${data.fchainId}`);
    }
    data.fchainId = validInt(data.fchainId);

    // validate nonce
    ret = p.parse(g, 'nonce', data.fnonce);
    if (!ret.success) {
      throw new Error(`${fname}invalid Nonce: ${data.fnonce}`);
    }

    // validate the date times
    validateDateTime(data.fissuedAt, 'Issued At');
    if (data.fexpirationTime) {
      validateDateTime(data.fexpirationTime, 'Expiration Time');
    }
    if (data.fnotBefore) {
      validateDateTime(data.fnotBefore, 'Not Before');
    }

    // validate request-id
    if (data.frequestId !== undefined && data.frequestId !== '') {
      ret = p.parse(g, 'request-id', data.frequestId);
      if (!ret.success) {
        throw new Error(`${fname}invalid Request ID: i${data.frequestId}`);
      }
    }

    // validate all resource URIs, if any
    if (data.fresources && data.fresources.length) {
      for (let i = 0; i < data.fresources.length; i++) {
        if (!isUri(data.fresources[i])) {
          throw new Error(`${fname}invalid resource URI [${i}]: ${data.fresources[i]}`);
        }
      }
    }

    // by now all first-pass values (e.g. fscheme) have been validated
    const o = {};
    o.scheme = data.fscheme;
    o.domain = data.fdomain;
    o.address = data.faddress;
    o.statement = data.fstatement;
    o.uri = data.furi;
    o.version = data.fversion;
    o.chainId = data.fchainId;
    o.nonce = data.fnonce;
    o.issuedAt = data.fissuedAt;
    o.expirationTime = data.fexpirationTime;
    o.notBefore = data.fnotBefore;
    o.requestId = data.frequestId;
    o.resources = undefined;
    if (data.fresources) {
      o.resources = [];
      for (let i = 0; i < data.fresources.length; i++) {
        o.resources.push(data.fresources[i]);
      }
    }
    return o;
  }

  /**
   * Parses a Uniform Resource Identifier (URI) defined in [RFC 3986](https://www.rfc-editor.org/rfc/rfc3986).
   *
   * @param {string} URI the URI to parse
   * @returns `false` if the URI is invalid, otherwise a URI object. e.g.<br>
   * ````
   * const obj = isUri('uri://user:pass@example.com:123/one/two.three?q1=a1&q2=a2#body');
   * ````
   * returns:
   * ````
   * obj.scheme = 'uri'
   * obj.userinfo = 'user:pass'
   * obj.host = 'example.com',
   * obj.port = 123,
   * obj.path = '/one/two.three',
   * obj.query = 'q1=a1&q2=a2',
   * obj.fragment = 'body'
   * ````
   */
  function isUri(URI) {
    const p = new Parser();
    const g = new Grammar();
    const uriData = {};
    p.callbacks['uri'] = cb.URI;
    p.callbacks['scheme'] = cb.scheme;
    p.callbacks['userinfo-at'] = cb.userinfo;
    p.callbacks['host'] = cb.host;
    p.callbacks['IP-literal'] = cb.ipLiteral;
    p.callbacks['port'] = cb.port;
    p.callbacks['path-abempty'] = cb.pathAbempty;
    p.callbacks['path-absolute'] = cb.pathAbsolute;
    p.callbacks['path-rootless'] = cb.pathRootless;
    p.callbacks['path-empty'] = cb.pathEmpty;
    p.callbacks['query'] = cb.query;
    p.callbacks['fragment'] = cb.fragment;
    p.callbacks['IPv4address'] = cb.ipv4;
    p.callbacks['nodcolon'] = cb.nodcolon;
    p.callbacks['dcolon'] = cb.dcolon;
    p.callbacks['h16'] = cb.h16;
    p.callbacks['h16c'] = cb.h16;
    p.callbacks['h16n'] = cb.h16;
    p.callbacks['h16cn'] = cb.h16;
    p.callbacks['dec-octet'] = cb.decOctet;
    p.callbacks['dec-digit'] = cb.decDigit;
    const ret = p.parse(g, 'uri', URI, uriData);
    if (!ret.success) {
      return false;
    }
    const uriObject = {
      uri: uriData['uri'],
      scheme: uriData['scheme'],
      userinfo: uriData['userinfo'],
      host: uriData['host'],
      port: uriData['port'],
      path: uriData['path'],
      query: uriData['query'],
      fragment: uriData['fragment'],
    };
    return uriObject;
  }

  /**
   * Stringify an [ERC-4361: Sign-In with Ethereum](https://eips.ethereum.org/EIPS/eip-4361) (siwe) object.
   *
   * @param {object} o an siwe message object (see {@link parseSiweMessage} )
   * @returns A stringified version of the object suitable as input to {@link parseSiweMessage}.
   *
   * For example, to validate an siwe object <br>*(ignore backslash, JSDoc can't handle closed bracket character without it)*:
   * ````
   * try{
   *  parseSiweMessage(siweObjectToString(siweObject));
   *  console.log('siweObject is valid');
   * \}catch(e){
   *  console.log('siweObject is not valid: ' + e.message);
   * \}
   * ````
   */
  function siweObjectToString(o) {
    let str = '';
    if (o.scheme && o.scheme !== '') {
      str += `${o.scheme}://`;
    }
    if (o.domain && o.domain !== '') {
      str += o.domain;
    }
    str += ' wants you to sign in with your Ethereum account:\n';
    if (o.address && o.address !== '') {
      str += `${o.address}\n`;
    }
    str += '\n';
    if (o.statement !== undefined) {
      str += `${o.statement}\n`;
    }
    str += '\n';
    if (o.uri && o.uri !== '') {
      str += `URI: ${o.uri}\n`;
    }
    if (o['version'] && o['version'] !== '') {
      str += `Version: ${o['version']}\n`;
    }
    if (o['chainId'] && o['chainId'] !== '') {
      str += `Chain ID: ${o['chainId']}\n`;
    }
    if (o['nonce'] && o['nonce'] !== '') {
      str += `Nonce: ${o['nonce']}\n`;
    }
    if (o['issuedAt'] && o['issuedAt'] !== '') {
      str += `Issued At: ${o['issuedAt']}`;
    }
    if (o['expirationTime'] && o['expirationTime'] !== '') {
      str += `\nExpiration Time: ${o['expirationTime']}`;
    }
    if (o['notBefore'] && o['notBefore'] !== '') {
      str += `\nNot Before: ${o['notBefore']}`;
    }
    if (o['requestId'] !== undefined) {
      str += `\nRequest ID: ${o['requestId']}`;
    }
    if (o['resources']) {
      str += `\nResources:`;
      if (Array.isArray(o.resources)) {
        for (let i = 0; i < o.resources.length; i++) {
          str += `\n- ${o.resources[i]}`;
        }
      }
    }
    return str;
  }

  /*
   * This is the [apg-lite](https://github.com/ldthomas/apg-lite) parser.
   * Included here is only the `Parser` class and it's accompanying `identities` and `utilities`.
   * See [apg-lite](https://github.com/ldthomas/apg-lite) for details and detailed examples of its use.
   * The license for this code is reproduced here:
   * ````
   *   copyright: Copyright (c) 2023 Lowell D. Thomas, all rights reserved
   *     license: BSD-2-Clause (https://opensource.org/licenses/BSD-2-Clause)
   *
   *    Redistribution and use in source and binary forms, with or without
   *    modification, are permitted provided that the following conditions are met:
   *
   *    1. Redistributions of source code must retain the above copyright notice, this
   *       list of conditions and the following disclaimer.
   *
   *    2. Redistributions in binary form must reproduce the above copyright notice,
   *       this list of conditions and the following disclaimer in the documentation
   *       and/or other materials provided with the distribution.
   *
   *    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
   *    AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
   *    IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
   *    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
   *    FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
   *    DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
   *    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
   *    CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
   *    OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   *    OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   * ````
   */
  const Parser = function fnparser() {
    const id = identifiers;
    const utils = utilities;
    const p = this;
    const thisFileName = 'parser.js: Parser(): ';
    const systemData = function systemData() {
      this.state = id.ACTIVE;
      this.phraseLength = 0;
      this.refresh = () => {
        this.state = id.ACTIVE;
        this.phraseLength = 0;
      };
    };
    p.ast = undefined;
    p.stats = undefined;
    p.trace = undefined;
    p.callbacks = [];
    let lookAhead = 0;
    let treeDepth = 0;
    let maxTreeDepth = 0;
    let nodeHits = 0;
    let maxMatched = 0;
    let rules = undefined;
    let udts = undefined;
    let opcodes = undefined;
    let chars = undefined;
    let sysData = new systemData();
    let ruleCallbacks = undefined;
    let udtCallbacks = undefined;
    let userData = undefined;
    const clear = () => {
      lookAhead = 0;
      treeDepth = 0;
      maxTreeDepth = 0;
      nodeHits = 0;
      maxMatched = 0;
      rules = undefined;
      udts = undefined;
      opcodes = undefined;
      chars = undefined;
      sysData.refresh();
      ruleCallbacks = undefined;
      udtCallbacks = undefined;
      userData = undefined;
    };

    const initializeCallbacks = () => {
      const functionName = `${thisFileName}initializeCallbacks(): `;
      let i;
      ruleCallbacks = [];
      udtCallbacks = [];
      for (i = 0; i < rules.length; i += 1) {
        ruleCallbacks[i] = undefined;
      }
      for (i = 0; i < udts.length; i += 1) {
        udtCallbacks[i] = undefined;
      }
      let func;
      const list = [];
      for (i = 0; i < rules.length; i += 1) {
        list.push(rules[i].lower);
      }
      for (i = 0; i < udts.length; i += 1) {
        list.push(udts[i].lower);
      }
      for (const index in p.callbacks) {
        if (p.callbacks.hasOwnProperty(index)) {
          i = list.indexOf(index.toLowerCase());
          if (i < 0) {
            throw new Error(`${functionName}syntax callback '${index}' not a rule or udt name`);
          }
          func = p.callbacks[index] ? p.callbacks[index] : undefined;
          if (typeof func === 'function' || func === undefined) {
            if (i < rules.length) {
              ruleCallbacks[i] = func;
            } else {
              udtCallbacks[i - rules.length] = func;
            }
          } else {
            throw new Error(`${functionName}syntax callback[${index}] must be function reference or falsy)`);
          }
        }
      }
    };

    p.parse = (grammar, startName, inputString, callbackData) => {
      const functionName = `${thisFileName}parse(): `;
      clear();
      chars = utils.stringToChars(inputString);
      rules = grammar.rules;
      udts = grammar.udts;
      const lower = startName.toLowerCase();
      let startIndex = undefined;
      for (const i in rules) {
        if (rules.hasOwnProperty(i)) {
          if (lower === rules[i].lower) {
            startIndex = rules[i].index;
            break;
          }
        }
      }
      if (startIndex === undefined) {
        throw new Error(`${functionName}start rule name '${startRule}' not recognized`);
      }
      initializeCallbacks();
      if (p.trace) {
        p.trace.init(rules, udts, chars);
      }
      if (p.stats) {
        p.stats.init(rules, udts);
      }
      if (p.ast) {
        p.ast.init(rules, udts, chars);
      }
      userData = callbackData;
      /* create a dummy opcode for the start rule */
      opcodes = [
        {
          type: id.RNM,
          index: startIndex,
        },
      ];
      /* execute the start rule */
      opExecute(0, 0);
      opcodes = undefined;
      /* test and return the sysData */
      let success = false;
      switch (sysData.state) {
        case id.ACTIVE:
          throw new Error(`${functionName}final state should never be 'ACTIVE'`);
        case id.NOMATCH:
          success = false;
          break;
        case id.EMPTY:
        case id.MATCH:
          if (sysData.phraseLength === chars.length) {
            success = true;
          } else {
            success = false;
          }
          break;
        default:
          throw new Error('unrecognized state');
      }
      return {
        success,
        state: sysData.state,
        stateName: id.idName(sysData.state),
        length: chars.length,
        matched: sysData.phraseLength,
        maxMatched,
        maxTreeDepth,
        nodeHits,
      };
    };
    // The `ALT` operator.<br>
    // Executes its child nodes, from left to right, until it finds a match.
    // Fails if *all* of its child nodes fail.
    const opALT = (opIndex, phraseIndex) => {
      const op = opcodes[opIndex];
      for (let i = 0; i < op.children.length; i += 1) {
        opExecute(op.children[i], phraseIndex);
        if (sysData.state !== id.NOMATCH) {
          break;
        }
      }
    };
    // The `CAT` operator.<br>
    // Executes all of its child nodes, from left to right,
    // concatenating the matched phrases.
    // Fails if *any* child nodes fail.
    const opCAT = (opIndex, phraseIndex) => {
      let success;
      let astLength;
      let catCharIndex;
      let catPhrase;
      const op = opcodes[opIndex];
      if (p.ast) {
        astLength = p.ast.getLength();
      }
      success = true;
      catCharIndex = phraseIndex;
      catPhrase = 0;
      for (let i = 0; i < op.children.length; i += 1) {
        opExecute(op.children[i], catCharIndex);
        if (sysData.state === id.NOMATCH) {
          success = false;
          break;
        } else {
          catCharIndex += sysData.phraseLength;
          catPhrase += sysData.phraseLength;
        }
      }
      if (success) {
        sysData.state = catPhrase === 0 ? id.EMPTY : id.MATCH;
        sysData.phraseLength = catPhrase;
      } else {
        sysData.state = id.NOMATCH;
        sysData.phraseLength = 0;
        if (p.ast) {
          p.ast.setLength(astLength);
        }
      }
    };
    // The `REP` operator.<br>
    // Repeatedly executes its single child node,
    // concatenating each of the matched phrases found.
    // The number of repetitions executed and its final sysData depends
    // on its `min` & `max` repetition values.
    const opREP = (opIndex, phraseIndex) => {
      let astLength;
      let repCharIndex;
      let repPhrase;
      let repCount;
      const op = opcodes[opIndex];
      if (op.max === 0) {
        // this is an empty-string acceptor
        // deprecated: use the TLS empty string operator, "", instead
        sysData.state = id.EMPTY;
        sysData.phraseLength = 0;
        return;
      }
      repCharIndex = phraseIndex;
      repPhrase = 0;
      repCount = 0;
      if (p.ast) {
        astLength = p.ast.getLength();
      }
      while (1) {
        if (repCharIndex >= chars.length) {
          /* exit on end of input string */
          break;
        }
        opExecute(opIndex + 1, repCharIndex);
        if (sysData.state === id.NOMATCH) {
          /* always end if the child node fails */
          break;
        }
        if (sysData.state === id.EMPTY) {
          /* REP always succeeds when the child node returns an empty phrase */
          /* this may not seem obvious, but that's the way it works out */
          break;
        }
        repCount += 1;
        repPhrase += sysData.phraseLength;
        repCharIndex += sysData.phraseLength;
        if (repCount === op.max) {
          /* end on maxed out reps */
          break;
        }
      }
      /* evaluate the match count according to the min, max values */
      if (sysData.state === id.EMPTY) {
        sysData.state = repPhrase === 0 ? id.EMPTY : id.MATCH;
        sysData.phraseLength = repPhrase;
      } else if (repCount >= op.min) {
        sysData.state = repPhrase === 0 ? id.EMPTY : id.MATCH;
        sysData.phraseLength = repPhrase;
      } else {
        sysData.state = id.NOMATCH;
        sysData.phraseLength = 0;
        if (p.ast) {
          p.ast.setLength(astLength);
        }
      }
    };
    // Validate the callback function's returned sysData values.
    // It's the user's responsibility to get them right
    // but `RNM` fails if not.
    const validateRnmCallbackResult = (rule, sysData, charsLeft, down) => {
      if (sysData.phraseLength > charsLeft) {
        let str = `${thisFileName}opRNM(${rule.name}): callback function error: `;
        str += `sysData.phraseLength: ${sysData.phraseLength}`;
        str += ` must be <= remaining chars: ${charsLeft}`;
        throw new Error(str);
      }
      switch (sysData.state) {
        case id.ACTIVE:
          if (!down) {
            throw new Error(
              `${thisFileName}opRNM(${rule.name}): callback function return error. ACTIVE state not allowed.`
            );
          }
          break;
        case id.EMPTY:
          sysData.phraseLength = 0;
          break;
        case id.MATCH:
          if (sysData.phraseLength === 0) {
            sysData.state = id.EMPTY;
          }
          break;
        case id.NOMATCH:
          sysData.phraseLength = 0;
          break;
        default:
          throw new Error(
            `${thisFileName}opRNM(${rule.name}): callback function return error. Unrecognized return state: ${sysData.state}`
          );
      }
    };
    // The `RNM` operator.<br>
    // This operator will acts as a root node for a parse tree branch below and
    // returns the matched phrase to its parent.
    // However, its larger responsibility is handling user-defined callback functions and `AST` nodes.
    // Note that the `AST` is a separate object, but `RNM` calls its functions to create its nodes.
    const opRNM = (opIndex, phraseIndex) => {
      let astLength;
      let astDefined;
      let savedOpcodes;
      const op = opcodes[opIndex];
      const rule = rules[op.index];
      const callback = ruleCallbacks[rule.index];
      /* ignore AST in look ahead (AND or NOT operator above) */
      if (!lookAhead) {
        astDefined = p.ast && p.ast.ruleDefined(op.index);
        if (astDefined) {
          astLength = p.ast.getLength();
          p.ast.down(op.index, rules[op.index].name);
        }
      }
      if (callback) {
        /* call user's callback going down the parse tree*/
        const charsLeft = chars.length - phraseIndex;
        callback(sysData, chars, phraseIndex, userData);
        validateRnmCallbackResult(rule, sysData, charsLeft, true);
        if (sysData.state === id.ACTIVE) {
          savedOpcodes = opcodes;
          opcodes = rule.opcodes;
          opExecute(0, phraseIndex);
          opcodes = savedOpcodes;
          /* call user's callback going up the parse tree*/
          callback(sysData, chars, phraseIndex, userData);
          validateRnmCallbackResult(rule, sysData, charsLeft, false);
        } /* implied else clause: just accept the callback sysData - RNM acting as UDT */
      } else {
        /* no callback - just execute the rule */
        savedOpcodes = opcodes;
        opcodes = rule.opcodes;
        opExecute(0, phraseIndex, sysData);
        opcodes = savedOpcodes;
      }
      if (!lookAhead) {
        /* end AST */
        if (astDefined) {
          if (sysData.state === id.NOMATCH) {
            p.ast.setLength(astLength);
          } else {
            p.ast.up(op.index, rule.name, phraseIndex, sysData.phraseLength);
          }
        }
      }
    };
    // The `TRG` operator.<br>
    // Succeeds if the single first character of the phrase is
    // within the `min - max` range.
    const opTRG = (opIndex, phraseIndex) => {
      const op = opcodes[opIndex];
      sysData.state = id.NOMATCH;
      if (phraseIndex < chars.length) {
        if (op.min <= chars[phraseIndex] && chars[phraseIndex] <= op.max) {
          sysData.state = id.MATCH;
          sysData.phraseLength = 1;
        }
      }
    };
    // The `TBS` operator.<br>
    // Matches its pre-defined phrase against the input string.
    // All characters must match exactly.
    // Case-sensitive literal strings (`'string'` & `%s"string"`) are translated to `TBS`
    // operators by `apg`.
    // Phrase length of zero is not allowed.
    // Empty phrases can only be defined with `TLS` operators.
    const opTBS = (opIndex, phraseIndex) => {
      const op = opcodes[opIndex];
      const len = op.string.length;
      sysData.state = id.NOMATCH;
      if (phraseIndex + len <= chars.length) {
        for (let i = 0; i < len; i += 1) {
          if (chars[phraseIndex + i] !== op.string[i]) {
            return;
          }
        }
